Gabel Bognerei: connect to SW

--- a/mod/area/gabel_bogner.git.yml
+++ b/mod/area/gabel_bogner.git.yml
@@ -228,7 +228,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 0.0}
+    Bearing: {type: :float, value: -0.0}
     CloseLockDC: {type: :byte, value: 40}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 15}
@@ -240,13 +240,13 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType_New: {type: :dword, value: 0}
+    GenericType_New: {type: :dword, value: 205}
     HP: {type: :short, value: 15}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: key_bognerei}
     KeyRequired: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: sw_bognerei}
+    LinkedTo: {type: :cexostr, value: gabel_sw_2_gabel_bognerei}
     LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
@@ -276,7 +276,7 @@ Door List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 0}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: bognerei_sw}
+    Tag: {type: :cexostr, value: gabel_bognerei_2_gabel_sw}
     TemplateResRef: {type: :resref, value: nw_door_normal}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -293,7 +293,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 40}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 15}
@@ -358,7 +358,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 40}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 15}
