new coins: add some basic descriptions
refs #397

--- a/mod/uti/m_cp0.uti.yml
+++ b/mod/uti/m_cp0.uti.yml
@@ -9,8 +9,9 @@ Cost: {type: :dword, value: 1}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
-  value: {}
-
+  value: 
+    0: "Der Kupferling ist die kleinste M\xFCnze in den Reichen.  Es gibt ihn in vielerlei Form, Pr\xE4gung und Variante, doch die meisten L\xE4nder haben ihn auf die ein oder andere Art.\n\n\
+      Dieser ist ein Kupferling der Silbermarken, mit einer Pr\xE4gung aus Silbrigmond."
 Description: 
   type: :cexolocstr
   value: {}
