--- a/mod/uti/m_pp0.uti.yml
+++ b/mod/uti/m_pp0.uti.yml
@@ -9,8 +9,9 @@ Cost: {type: :dword, value: 1}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
-  value: {}
-
+  value: 
+    0: "Der Platindrache ist ist die Standardw\xE4hrung unter all denen, die nie um eine Mahlzeit je eine Sorge hatten. Das einfache Volk bekommt selten nur einen zu sehen, und es wird unter den Gassentreibenden daf\xFCr get\xF6tet - bezahlt er doch Essen f\xFCr die ganze Familie f\xFCr bemerkenswert lange Zeit.\n\n\
+      Dieser Platindrache tr\xE4gt Silbrigmonder Pr\xE4gung."
 Description: 
   type: :cexolocstr
   value: {}
