--- a/mod/uti/m_sp0.uti.yml
+++ b/mod/uti/m_sp0.uti.yml
@@ -9,8 +9,9 @@ Cost: {type: :dword, value: 1}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
-  value: {}
-
+  value: 
+    0: "Der Silberfalke ist die Standardw\xE4hrung unter kleineren H\xE4ndlern und Reisenden. Er bezahlt f\xFCr Unterkunft, Verpflegung und Geleitschutz zuverl\xE4ssig und tadellos, ungeachtet vonPr\xE4gung oder Form.\n\n\
+      Dieser ist ein Silberfalke der Silbermarken, mit einer Pr\xE4gung aus Sundabar."
 Description: 
   type: :cexolocstr
   value: {}
